@@ -1,4 +1,5 @@
-#!/usr/bin/env bash
+#!/usr/bin/env zsh
+##!/usr/bin/env bash
 #TODO: ensure posix shell compliance
 
 if [[ $# -lt 3 ]]; then
@@ -8,12 +9,12 @@ fi
 
 while read PROP; do
 	if [[ ! "$PROP" =~ '#' ]] && [[ $(expr length "$PROP") -ne 0 ]]; then
-		IFS=':'
-		P=($PROP)
-		"$2" -o "$1/autogenerated_$P.c" "$PROP"
+		#IFS=':'
+		#P=($PROP)
+		#"$2" -o "$1/autogenerated_$P.c" "$PROP"
   		# Temporary workaround for zsh
-    		# P=(${(s/:/)PROP})
-      		# "$2" -o "$1/autogenerated_${P[1]}.c" "$PROP"
+    		 P=(${(s/:/)PROP})
+      		 "$2" -o "$1/autogenerated_${P[1]}.c" "$PROP"
 	fi
 done < "$3"
 
