@@ -1,7 +1,13 @@
-execute_process(COMMAND gperf ${CMAKE_SOURCE_DIR}/contrib/libsvgtiny/src/colors.gperf --output-file=${CMAKE_BINARY_DIR}/contrib/libsvgtiny/autogenerated_colors.c)
+execute_process(COMMAND gperf ${CMAKE_SOURCE_DIR}/contrib/libsvgtiny/src/colors.gperf --output-file=${CMAKE_BINARY_DIR}/contrib/libsvgtiny/autogenerated_colors.c RESULT_VARIABLE RET)
+if(NOT RET EQUAL 0)
+	message(FATAL_ERROR "gperf for libsvgtiny failed (error ${RET})")
+endif()
 
 # Squash "error: no previous declaration for 'svgtiny_color_lookup'"
-execute_process(COMMAND sed "s/^\\(const struct svgtiny_named_color\\)/static \\1/" -i ${CMAKE_BINARY_DIR}/contrib/libsvgtiny/autogenerated_colors.c)
+execute_process(COMMAND sed "s/^\\(const struct svgtiny_named_color\\)/static \\1/" -i ${CMAKE_BINARY_DIR}/contrib/libsvgtiny/autogenerated_colors.c RESULT_VARIABLE RET)
+if(NOT RET EQUAL 0)
+	message(FATAL_ERROR "sed for libsvgtiny failed (error ${RET})")
+endif()
 
 add_library(svgtiny SHARED
 	src/svgtiny.c
